--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/adapter-cloudflare-workers": "^2.7.1",
+		"@sveltejs/adapter-vercel": "^5.6.1",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
@@ -33,8 +33,7 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.0.0",
-		"wrangler": "^3.108.1"
+		"vite": "^6.0.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
